Sorted out alignment issue.

--- a/static/css/bedfinder.css
+++ b/static/css/bedfinder.css
@@ -23,6 +23,7 @@
 .widget-header {
     border-bottom: solid;
     width: 100%;
+    height: 40px;
     text-align: center;
     padding: 0px;
     margin: 0px;
